Configuration spring batch